// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component testing Badge normal 1`] = `
<DocumentFragment>
  <span
    class="sc-bczRLJ fLPRHA"
    color="#FFFFFF"
    font-size="13px"
    font-weight="normal"
    type="normal"
  >
    text
  </span>
</DocumentFragment>
`;

exports[`Badge component testing Badge pill 1`] = `
<DocumentFragment>
  <span
    class="sc-bczRLJ iXQoLX"
    color="#FFFFFF"
    font-size="13px"
    font-weight="normal"
    type="pill"
  >
    text
  </span>
</DocumentFragment>
`;
